# corolib

./: .clangd  .gitignore  CMakeLists.txt  README.md
flags/: CMakeLists.txt
src/: main.c
src/core/: CMakeLists.txt
src/core/include/core/: coro.h  coro_def.h  coro_def_internal.h  ctx_internal.h
src/core/source/: coro.c  coro_def_internal.c  ctx_internal.s
